--- a/object.css
+++ b/object.css
@@ -6,6 +6,14 @@ align-items: center;
 justify-content:space-around;
 margin: 10rem auto;
 }
+.parent {
+    font-size: 30px;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+    align-items: center;
+    padding: 20px;
+}
 .card {
     height: 40vh;
     height: 50vh;
@@ -21,7 +29,7 @@ body{
 .img{
     flex-wrap: wrap;
     align-items: center;
-    height: 190px;
-    width: 190px;
+    height: 198px;
+    width: 198px;
     object-fit: cover;
 }
