--- a/object.css
+++ b/object.css
@@ -1,28 +1,25 @@
-#column {
+.column {
 display:flex;
 width: 90%;
+height: 85%;
 flex-wrap:wrap;
 align-items: center;
 justify-content:space-around;
 margin: 10rem auto;
 }
-.parent {
-    font-size: 30px;
-    display: flex;
-    justify-content: space-around;
-    border-radius: 10px;
-    align-items: center;
-    padding: 20px;
-}
 .card {
-    height: 40vh;
-    height: 50vh;
-    width: 20vw;
-    background-color: rgb(206, 98, 35);
-    border-radius: 20px;
-    margin: 0.5rem 0;
-    font-family: Impact;
-    }
+height: 500px;
+width: 350px;
+border:2px solid #000;
+margin: 10px;
+background-color: rgb(206, 98, 35);
+display:flex;
+flex-direction: column;
+align-items: top;
+align-items: center;
+justify-content: space-around;
+border-radius: 20px;
+}
 body{
     background-color: rgba(240, 175, 100, 0.973);
 }
